Added (de)select mails for deletion. Added jquery ui. Small fixes. Added some more comments to the code.

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,24 @@ body {
   font-size: 14px;
 }
 
+/* --- Mail list options --- */
+#mail-options {
+  margin-left: 5px;
+}
+
+#mail-options > div {
+  display: inline-block;
+}
+
+#mail-options > div:hover {
+  color: #33aaff;
+  cursor: pointer;
+}
+
+#mail-options > div:not(:first-child) {
+  display: none;
+}
+
 /* --- Mail list --- */
 
 #mails {
